--- a/clusters/envs/dev/westeurope/kustomization.yaml
+++ b/clusters/envs/dev/westeurope/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system-kustomization.yaml
-  # - cluster-config.yaml
+  # - cluster-configs.yaml
   - infra.yaml
   - infra-configs.yaml
   - apps.yaml
