--- a/clusters/envs/prod/westeurope/cluster-config.yaml
+++ b/clusters/envs/prod/westeurope/cluster-config.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-config
+  name: cluster-configs
   namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: "./cluster-config/envs/prod/westeurope"
+  path: "./cluster-configs/envs/prod/westeurope"
   prune: true
   timeout: 5m0s
