--- a/clusters/envs/uat/eastasia/kustomization.yaml
+++ b/clusters/envs/uat/eastasia/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system-kustomization.yaml
-  - cluster-config.yaml
+  - cluster-configs.yaml
   - infra.yaml
   - apps.yaml
