--- a/infra/envs/dev/westeurope/kustomization.yaml
+++ b/infra/envs/dev/westeurope/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../base/cert-manager/
-  - ../../../base/ingress-nginx/
+  # - ../../../base/ingress-nginx/
   - ../../../base/kube-prometheus-stack/
   # - ../../../base/kurrentdb-operator/
   # - ../../../base/kurrentdb-monitoring/
