--- a/infra/base/kustomization.yaml
+++ b/infra/base/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - cert-manager
   - external-secrets
   # - ingress-nginx
-  - kube-prometheus-stack
+  # - kube-prometheus-stack
   - kurrentdb-monitoring
   - kurrentdb-operator
   - contour
