--- a/infra/base/contour/source.yaml
+++ b/infra/base/contour/source.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: contour
+  name: bitnami
   namespace: flux-system
 spec:
   interval: 24h
-  url: https://kubernetes.github.io/contour
+  url: https://charts.bitnami.com/bitnami
