--- a/infra-configs/base/kustomization.yaml
+++ b/infra-configs/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - cert-manager
-  - external-secrets
+  # - external-secrets
   # - kurrentdb-monitoring
 
 labels:
