--- a/apps/envs/dev/westeurope/podinfo/podinfo-patch.yaml
+++ b/apps/envs/dev/westeurope/podinfo/podinfo-patch.yaml
@@ -11,6 +11,8 @@ spec:
     spec:
       version: 6.8.0
   values:
+    metrics:
+      enabled: false
     replicaCount: 1
     resources:
       requests:
