--- a/apps/envs/dev/westeurope/podinfo/podinfo-patch.yaml
+++ b/apps/envs/dev/westeurope/podinfo/podinfo-patch.yaml
@@ -23,14 +23,14 @@ spec:
         memory: "64Mi"
     ingress:
       annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-staging"
+        cert-manager.io/cluster-issuer: "letsencrypt-prod"
         nginx.ingress.kubernetes.io/ssl-redirect: "true"
       hosts:
-        - host: podinfo-westeurope-dev.127-0-0-1.nip.io # Change this to your domain
+        - host: podinfo-westeurope-dev.50-85-102-74.nip.io # Change this to your domain
           paths:
             - path: /
               pathType: Prefix
-      # tls:
-      #   - secretName: podinfo-westeurope-dev.127-0-0-1.nip.io
-      #     hosts:
-      #       - podinfo-westeurope-dev.127-0-0-1.nip.io # Change this to your domain
+      tls:
+        - secretName: podinfo-westeurope-dev.50-85-102-74.nip.io
+          hosts:
+            - podinfo-westeurope-dev.50-85-102-74.nip.io # Change this to your domain
